# rtrv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TECHNICAL_DESIGN.md  build_and_run_tests.sh  launch_webui.sh  roadMap.md
benchmarks/: BENCHMARK_GUIDE.md  CMakeLists.txt  EXAMPLE_RESULTS.md  README.md  compare_benchmarks.py  concurrent_benchmark.cpp  indexing_benchmark.cpp  memory_benchmark.cpp  run_benchmarks.sh  run_tokenizer_benchmark.sh  search_benchmark.cpp  tokenizer_simd_benchmark.cpp  topk_benchmark.cpp
data/: README.md  test_corpus.txt  wikipedia_sample.json  wikipedia_sample.txt
examples/: CMakeLists.txt  README.md  batch_indexing.cpp  rest_server.cpp  simple_search.cpp  skip_pointer_demo.cpp
examples/web_ui/: app.js  index.html  style.css
include/: document.hpp  document_loader.hpp  fuzzy_search.hpp  inverted_index.hpp  persistence.hpp  query_cache.hpp  query_parser.hpp  ranker.hpp  search_engine.hpp  search_types.hpp  snippet_extractor.hpp  tokenizer.hpp  top_k_heap.hpp
server/: CMakeLists.txt  README.md  rest_server.cpp  rest_server_crow.cpp  rest_server_drogon.cpp  rest_server_interactive.cpp
server/ui/: README.md  app.js  index.html  launch_webui.sh  style.css
server/web_ui/: CMakeCache.txt  Makefile  README.md  app.js  cmake_install.cmake  index.html  launch_webui.sh  style.css
src/: document.cpp  document_loader.cpp  fuzzy_search.cpp  inverted_index.cpp  persistence.cpp  query_cache.cpp  query_parser.cpp  ranker.cpp  search_engine.cpp  snippet_extractor.cpp  tokenizer.cpp
tests/: CMakeLists.txt  document_loader_test.cpp  fuzzy_search_test.cpp  integration_test.cpp  inverted_index_test.cpp  query_cache_test.cpp  query_parser_test.cpp  ranker_test.cpp  search_engine_test.cpp  search_engine_test.cpp.bak  snippet_extractor_test.cpp  tokenizer_test.cpp  top_k_heap_test.cpp
